--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ body{
 
 <script>
     var weekday = new Array(7);
-    weekday[0] = "Sunday";
-    weekday[1] = "Monday";
-    weekday[2] = "Tuesday";
-    weekday[3] = "Wednesday";
-    weekday[4] = "Thursday";
-    weekday[5] = "Friday";
-    weekday[6] = "Saturday";
+    weekday[0] = "Domingo";
+    weekday[1] = "Segunda-feira";
+    weekday[2] = "Terça-feira";
+    weekday[3] = "Quarta-feira";
+    weekday[4] = "Quinta-feira";
+    weekday[5] = "Sexta-feira";
+    weekday[6] = "Sábado";
 
     
     var today = new Date();
@@ -45,13 +45,13 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'Good Morning  ';
+        greet = 'Bom dia Flor do Dia  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon ';
+        greet = 'Boa tarde Meu Amor ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening  ';
+        greet = 'Boa noite pra quem é de boa noite  ';
 
     document.getElementById('lbl').innerHTML =
-        greet+=`<div id="date"> It's ${date}</div>`;
+        greet+="Rafinha e Matheuzito" +'<div id="date"> It's ${date}</div>`;
 </script> 
 </html>
